# tris-socket

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.MD
src/: arena.c  arena.h  client.c  game.c  game.h  room.c  room.h  server.c
test/: game_test.c
